# postgresql_access

./: README.md  RELEASE.md  pyproject.toml  setup.cfg
src/postgresql_access/: __init__.py  database.py
src/tests/: atest.py  test.cfg
