[metadata]
description = TBD 
#long_description = file: README.md
#long_description_content_type = text/markdown
license = MIT license 

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	postgresql_access
install_requires =


[build_ext]
debug = 1

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md

